- Fixed an issue where the focus was not given to the JavaScript editor when this one was already displayed. - Fixed an issue where the focus was not being reset after a specific action. - Fixed an issue where the focus outline was not displayed in the contextual menu. - Fixed an issue where the color of the notifications was not reset after leaving the high contrast mode. - Fixed an issue in Rename Your Project where the color of the Save button was not green anymore. - Fixed an issue where the search button's border in Add Package was not round anymore. - Removed the focus outline in a dropdown menu in Blockly.

--- a/theme/accessibility.less
+++ b/theme/accessibility.less
@@ -14,7 +14,8 @@
 }
 
 @media not all and (pointer:coarse) {
-    *:not([tabindex='-1']):focus {
+    *:not([tabindex='-1']):not(.blocklyGridPickerMenu):focus,
+    [role='menuitem']:focus {
         outline: 2px solid #4D90FE !important;
     }
 }
